<resources>
    <string name="str_auto_adjust">Auto Adjust</string>
    <string name="app_name">Tvsetting</string>
    <string name="str_pic_picture_adjustment">Imageadjust</string>
    <string name="str_pic_picture">Picture</string>
    <string name="str_pic_picturemode">Picture Mode</string>
    <string name="edit_program_toast">Channel name cannot be empty!</string>
    <string name="str_delete_program_title">Are you sure to delete?</string>
    <string name="str_warning_isrecording">PLS Stop Record Before PowerOff</string>
    <string name="str_stop_record_to_power_dialog_message">System will stop record to Power Off !</string>
    <string name="str_stop_timeshift_to_power_dialog_message">System will stop timeshift to Power Off !</string>
    <string name="str_stop_record_to_home_dialog_message">System will stop record to Home !</string>
    <string name="str_stop_playback_to_home_dialog_message">System will stop playback to Home !</string>
    <string name="str_stop_timeshift_to_home_dialog_message">System will stop timeshift to Home !</string>
    <string name="str_1000">-</string>
    <string name="str_100">-</string>
    <string name="str_10">-</string>
    <string name="str_1">-</string>
    <string name="str_root_popup_off_after">Seconds to shutdown</string>
    <string name="str_schedule_select_null_msg">No Event Selected </string>
    <string-array name="str_arr_pic_picturemode_vals">
        <item>Lightness</item>
        <item>Standard</item>
        <item>Soft</item>
        <item>User</item>
        <item>game</item>
        <item>auto</item>
        <item>pc</item>
        <item>vivid</item>
        <item>natural</item>
        <item>sports</item>
    </string-array>
     <string-array name="str_arr_pic_picturemode_vals_onida">
         
        <item>Lightness</item>
        <item>Flat</item>
        <item>Cinema</item>
        <item>Normal</item>
        <item>Game</item>
        <item>Auto</item>
        <item>PC</item>
        <item>Vivid</item>
        <item>ecoPower</item>
        <item>Sports</item>
    </string-array>
    <string name="str_pic_contrast">Contrast</string>
    <string name="str_pic_brightness">Brightness</string>
    <string name="str_pic_color">Color</string>
    <string name="str_pic_sharpness">Sharpness</string>
    <string name="str_pic_hue">Hue</string>
    <string name="str_pic_saturation">Saturation</string>
    <string name="str_pic_backlight">Back Light</string>
    <string name="str_pic_colortemperature">Color Temperature</string>
    <string-array name="str_arr_pic_colortemperature_vals">
        <item>Cool</item>
        <item>Normal</item>
        <item>Warm</item>
        <item>User</item>
    </string-array>
    <string name="str_pic_colortemperature_red">Red</string>
    <string name="str_pic_colortemperature_green">Green</string>
    <string name="str_pic_colortemperature_blue">Blue</string>
    <string name="str_pic_zoommode">Zoom Mode</string>
    <string name="str_pic_size">Picture Size</string>
    <string-array name="str_arr_pic_zoommode_vals">
        <item>Default</item>
        <item>16:9</item>
        <item>4:3</item>
        <item>Auto</item>
        <item>Panorama Mode</item>
        <item>Just Scan</item>
        <item>Zoom1</item>
        <item>Zoom2</item>
        <item>14:9</item>
        <item>Point to Point</item>
        <item>Subtitle</item>
        <item>Movie</item>
        <item>Personal</item>
        <item>4x3_PanScan</item>
        <item>4x3_LetterBox</item>
        <item>16x9_PillarBox</item>
        <item>16x9_PanScan</item>
        <item>4x3_Combind</item>
        <item>16x9_Combind</item>
        <item>Zoom_2x</item>
        <item>Zoom_3x</item>
        <item>Zoom_4x</item>
    </string-array>
    <string name="str_pic_imgnoisereduction">Image Noise Reduction</string>
    <string name="str_pic_mpegnoisereduction">MPEG Noise Reduction</string>
    <string-array name="str_arr_pic_imgnoisereduction_vals">
        <item>Off</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Auto</item>
    </string-array>
    <string-array name="str_arr_pic_mpegnoisereduction_vals">
        <item>Off</item>
        <item>Weak</item>
        <item>Middle</item>
        <item>Strong</item>
    </string-array>
    <string-array name="str_arr_sleep_mode_vals">
        <item>Off</item>
        <item>10 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
        <item>60 Minutes</item>
        <item>90 Minutes</item>
        <item>120 Minutes</item>
        <item>180 Minutes</item>
        <item>240 Minutes</item>
    </string-array>
    <string-array name="str_arr_pvr_mode_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_pic_pcimagemode">PC Image Mode</string>
    <string name="str_pic_autotune">Auto Adjust</string>
    <string name="str_set_hdmicec_arc">HDMI_ARC</string>
	<string name="str_set_scrolling_display">Scrolling Display</string>
    <string name="str_pic_pcimagemode_waiting">PC image is adjusting, please try later...</string>
    <string name="str_pic_pcimagemode_success">PC image adjusted success</string>
    <string name="str_pic_pcimagemode_failed">PC image adjusted fail</string>
    <string name="str_pic_clock">Clock</string>
    <string name="str_pic_phase">Phase</string>
    <string name="str_pic_horizontal_pos">Horizontal Position</string>
    <string name="str_pic_vertical_pos">Vertical Position</string>
    <string name="str_sound_sound_adjustment">Sound</string>
    <string name="str_sound_soundmode">Sound Mode</string>
    <string-array name="str_arr_sound_soundmode_vals">
        <item>Standard</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Sports</item>
        <item>User</item>
    </string-array>
 	<string-array name="str_arr_sound_soundmode_vals_onida">
        <item>Normal</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Flat</item>
    </string-array>
    <string name="str_sound_bass">Bass</string>
    <string name="str_sound_treble">Treble</string>
    <string name="str_sound_equalizer">Equalizer</string>
    <string name="str_sound_equalizer120hz">120Hz</string>
    <string name="str_sound_equalizer500hz">500Hz</string>
    <string name="str_sound_equalizer1.5khz">1.5KHz</string>
    <string name="str_sound_equalizer5khz">5KHz</string>
    <string name="str_sound_equalizer10khz">10KHz</string>
    <string name="str_sound_balance">Balance</string>
    <string name="str_sound_avc">Auto Volume</string>
    <string name="str_sound_ad">AD Switch</string>
    <string name="str_sound_ad_volume">AD Volume</string>
    <string name="str_sound_autohoh">Auto HOH</string>
    <string name="str_sound_truehdbypass">Dolby TrueHD/DTS-HD</string>
    <string name="str_sound_srs">SRS</string>
    <string-array name="str_arr_sound_avc_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_surround">Surround</string>
    <string-array name="str_arr_sound_surround_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_spdifoutput">SPDIF Output</string>
    <string-array name="str_arr_sound_spdifoutput_vals">
        <item>PCM</item>
        <item>OFF</item>
        <item>RAW</item>
    </string-array>
    <string name="str_sound_music_mode">Music Mode</string>
    <string name="str_sound_separatehear">Alone</string>
    <string-array name="str_arr_sound_separatehear_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_3d_3d">3D</string>
    <string name="str_3d_self_adaptive_detecttriple">3D Self Detect</string>
    <string-array name="str_arr_3d_self_adaptive_detecttriple_vals">
        <item>Off</item>
        <item>Right Now</item>
        <item>When Source Change</item>
        <item>Real Time</item>
    </string-array>
    <string name="str_3dto2d_self_adaptive_detecttriple">3D-2D Self Detect</string>
    <string-array name="str_arr_3dto2d_self_adaptive_detecttriple_vals">
        <item>Off</item>
        <item>Right Now</item>
    </string-array>
    <string name="str_3d_self_adaptive_detectlevel">SelfAdaptive Level</string>
    <string-array name="str_arr_3d_self_adaptive_detectlevel_vals">
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
    </string-array>
    <string name="str_3d_conversion">3D Conversion</string>
    <string-array name="str_arr_3d_3dconversion_vals">
        <item>None</item>
        <item>SBS</item>
        <item>TB</item>
        <item>FP</item>
        <item>LA</item>
        <item>2D-3D</item>
        <item>Auto</item>
        <item>CB</item>
        <item>PA</item>
        <item>FA</item>
    </string-array>
    <string name="str_3d_3dto2d">3Dto2D</string>
    <string-array name="str_arr_3d_3dto2d_vals">
        <item>None</item>
        <item>SBS</item>
        <item>TB</item>
        <item>FP</item>
        <item>LA</item>
        <item>FA</item>
        <item>Auto</item>
        <item>CB</item>
        <item>PA</item>
    </string-array>
    <string name="str_3d_3ddepth">3D Depth</string>
    <string-array name="str_arr_3d_3ddepth_vals">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="str_3d_3doffset">3D Offset</string>
    <string-array name="str_arr_3d_3doffset_vals">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="str_3d_autostart">Auto Start</string>
    <string-array name="str_arr_3d_autostart_vals">
        <item>OFF</item>
        <item>2D</item>
        <item>3D</item>
    </string-array>
    <string name="str_3d_3doutputaspect">3D Output Aspect</string>
    <string-array name="str_arr_3d_3doutputaspect_vals">
        <item>Full</item>
        <item>4:3</item>
    </string-array>
    <string name="str_3d_lrswitch">LR View Switch</string>
    <string-array name="str_arr_3d_lrswitch_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_cha_antannatype">Antenna Type</string>
    <string name="str_cha_exittuning_info">Are you sure to exit ATV/DTV tuning?</string>
    <string name="str_cha_exittuning_yes">YES</string>
    <string name="str_cha_exittuning_no">NO</string>
    <string name="bt_info_switch">Select: OK</string>
    <string name="bt_info_adjust">Navigate: </string>
    <string name="bt_info_back">Back: </string>
	<string name="bt_info_back_exit">Back: EXIT</string>
</resources>