<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/colour_bg"
    android:layout_gravity="center"
    >
  <TextView
      android:id="@+id/textview_cha_exittuning_info"
      android:layout_width="fill_parent" 
      android:layout_height="120dp" 
      android:gravity="center"
      android:text="@string/str_cha_exittuning_info"
      android:textColor="#ffffff"
      android:textSize="22sp"
    />
   <LinearLayout 
	 		android:id="@+id/linearlayout_cha_exittune"
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			>
			<TextView
			  	android:id="@+id/textview_cha_exittune_yes"
			    android:layout_width="60dp" 
			    android:layout_height="33dp" 
			    android:gravity="center"
			    android:text="@string/str_cha_exittuning_yes"
			    android:textColor="#ffffff"
			    android:textSize="22sp"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:background="@drawable/button_state"
			    />
			<TextView 
				android:id="@+id/textview_cha_exittune_no" 
			    android:layout_width="60dp" 
			    android:layout_height="33dp" 
			    android:gravity="center"
			    android:text="@string/str_cha_exittuning_no"
			    android:textColor="#ffffff"
			    android:textSize="22sp"
			    android:layout_marginLeft="130dp"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:background="@drawable/button_state"
			    />												
		</LinearLayout>
</LinearLayout>
